--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: How to build Agora Audio, Video and Sharing App on Windows
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description:  Developer from Bay area
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/75238316?s=400&u=31102496344fae3e3b0a35c103f7f77a55bc645d&v=4
 
 #
 # Flags below are optional
